# optimmethods

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  УЧЕБНОЕ  ПОСОБИЕ 6.docx
docs/: lr1.md  lr2.md  lr3.md  lr5.md
lr1/: __init__.py  __main__.py  app_models.py  app_service.py  function_defs.py  gui_app.py  logging_setup.py  lr1.py  lr3.py  main.py  plotting.py  search_methods.py  tox.ini
lr1/application/: __init__.py  analysis.py  services.py  viewmodels.py
lr1/domain/: __init__.py  functions.py  models.py  numerical.py  search.py
lr1/infrastructure/: __init__.py  logging.py  settings.py
lr1/tests/: test_lr1_architecture.py  test_lr1_input_contracts.py  test_lr1_presentation.py  test_lr1_search_contracts.py  test_lr1_services.py
lr1/ui/: __init__.py  plotting.py  state.py  tabs.py  window.py  workers.py
lr2/: __init__.py  __main__.py  main.py  pyproject.toml  requirements.txt  tox.ini
lr2/application/: __init__.py  artifacts.py  services.py
lr2/domain/: __init__.py  models.py  polynomial.py  rosenbrock.py
lr2/tests/: test_lr2_architecture.py  test_lr2_batch_errors.py  test_lr2_discrete_rosenbrock.py  test_lr2_input_contracts.py  test_lr2_rosenbrock.py  test_lr2_rosenbrock_contracts.py  test_lr2_window_sync.py
lr2/ui/: __init__.py  window.py
lr3/: __init__.py  __main__.py  main.py  tox.ini
lr3/application/: __init__.py  services.py
lr5/: __init__.py  __main__.py  main.py
optim_core/: __init__.py  entrypoint.py  parsing.py
tools/: run_lab_lint.sh
Отчет/: Методы_оптимизации_пз1.docx  Методы_оптимизации_пз5.docx
(+48 files in other folders)
