[project]
name = "optimmethods-lr2"
version = "0.1.0"
description = "Лабораторная работа 2 — метод Розенброка"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10,<4",
    "PySide6>=6.8,<7",
    "numpy>=1.26,<3",
]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_calls = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.deptry]
ignore = ["DEP002", "DEP003"]

[tool.deptry.package_module_name_map]
PySide6 = "PySide6"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
